# Mkdocs_example

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  setup.cfg  setup.py  sitemap.xml
about/: index.html
api/: index.html
docs/: about.md  api.md  others.md
others/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
site/about/: index.html
site/api/: index.html
site/others/: index.html
site/search/: search_index.json
src/: quick_math.py
src/my_package/: quick_math.py
src/my_package/core/: main.py
tests/: test_math.py
