[metadata]
name = my_package
version = 0.1.0
author = Ayana Lamatkhanova
author_email = ayana.lamatkhanova@sixfoissept.com
description = A short description of your package
long_description = file: README.md
url = https://github.com/Lamatkhan/Mkdocs
license = MIT

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    pandas
    requests
    mkdocs
    mkdocstrings-python
    mkdocs-material

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
